# pointillism

./: .gitignore  README.md  setup.cfg
examples/: charizard.py
pointillism/: __init__.py
pointillism/process/: process.py
pointillism/sprites/: loader.py
