[bdist_wheel]
universal = 1

[metadata]
project = Pointillism
name = pointillism
version = 0.0.1
author = Matt Pewsey
copyright = 2019, Matt Pewsey
description = Create pointilized images using sprites or other sub images.
long_description = file: README.md
long_description_content_type = text/markdown
license = None
license_file = LICENSE
url = https://github.com/mpewsey/pointillism
keywords =
  images
  pointillism
classifiers =
  Programming Language :: Python :: 2.7
  Programming Language :: Python :: 3.5
  Programming Language :: Python :: 3.6
  Operating System :: OS Independent
  License :: OSI Approved :: BSD License

[options]
packages = find:
include_package_data = True
install_requires =
  numpy>=1.14.5
  imageio>=2.3.0
  opencv-python>=4.0.0.21
  scikit-learn>=0.19.1
python_requires = >=2.7,!=3.0,!=3.1,!=3.2,!=3.3,!=3.4

[options.extras_require]
test =
  pytest>=3.5.1
  pytest-cov>=2.5.1
  codecov>=2.0.15
docs =
  docutils==0.14
  numpydoc>=0.8.0
